feat : 배너 이미지 테스트 코드 수정